Gestion des problèmes de build liés à la version de G++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.15)
 cmake_policy(SET CMP0091 NEW)
 project(file-transfer-app)
 
+if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 8.0)
+	message(FATAL_ERROR "Pour compiler, ce projet nécessite G++ version 8.0 minimum")
+endif()
+
 set(CMAKE_BUILD_TYPE Debug)
 #list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)
 
@@ -20,5 +24,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(ft_server ${SRV_SOURCES})
 add_executable(ft_client ${CLI_SOURCES})
 
-target_link_libraries(ft_server PRIVATE ${CONAN_LIBS})
-target_link_libraries(ft_client PRIVATE ${CONAN_LIBS})
+target_link_libraries(ft_server PRIVATE ${CONAN_LIBS} stdc++fs)
+target_link_libraries(ft_client PRIVATE ${CONAN_LIBS} stdc++fs)
+if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
+	target_link_libraries(ft_server PRIVATE stdc++fs)
+	target_link_libraries(ft_client PRIVATE stdc++fs)
+endif()
